kernel/atomgit/vmw_vsock_ gcc-16 编译时出现 Wnonnull 假阳性告警导致构建失败.txt
#标题
vmw_vsock: gcc-16 编译时出现 Wnonnull 假阳性告警导致构建失败

#内核版本
OLK-6.6

#问题现象
在使用 gcc-16.0.1 快照版本编译内核且开启 CONFIG_WERROR 时，编译过程因触发 `-Werror=nonnull` 错误而失败。具体表现为在编译 `net/vmw_vsock/vmci_transport.c` 文件时，编译器误报 `memcpy` 函数的源地址参数为 NULL。

#主要错误日志
In file included from arch/x86/include/asm/string.h:6,
                 from net/vmw_vsock/vmci_transport.c:10:
In function 'vmci_transport_packet_init',
    inlined from '__vmci_transport_send_control_pkt.constprop' at net/vmw_vsock/vmci_transport.c:198:2:
arch/x86/include/asm/string_32.h:150:25: error: argument 2 null where non-null expected because argument 3 is nonzero [-Werror=nonnull]
  150 | #define memcpy(t, f, n) __builtin_memcpy(t, f, n)
      |                         ^~~~~~~~~~~~~~~~~~~~~~~~~
net/vmw_vsock/vmci_transport.c:164:17: note: in expansion of macro 'memcpy'
  164 |                 memcpy(&pkt->u.wait, wait, sizeof(pkt->u.wait));
      |                 ^~~~~~

#问题根因
gcc-16 编译器对 `vmci_transport_packet_init` 函数进行了内联分析，产生了假阳性告警。编译器推断在 `memcpy(&pkt->u.wait, wait, sizeof(pkt->u.wait))` 调用处，参数 `wait` 可能为 NULL（因为函数在其他调用路径中确实传入了 NULL），但实际上在该代码路径下 `wait` 不为 NULL 且长度参数非零，编译器错误地触发了 nonnull 属性检查告警。

#解决方案
将 `memcpy(&pkt->u.wait, wait, sizeof(pkt->u.wait))` 替换为结构体直接赋值语句 `pkt->u.wait = *wait;`。此修改在功能上完全等价，但绕过了 gcc-16 对 `__builtin_memcpy` 的错误检查逻辑，从而消除构建错误。

#来源
https://atomgit.com/openeuler/kernel/commit/1afcd498046afa23a9b335437abc39e6b008cec1